--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://PMT:PMT12345@pmt.48ymply.mongodb.net/pmt?retryWrites=true&w=majority&appName=PMT
+MONGO_URI=mongodb+srv://PMT:PMT12345@pmt.48ymply.mongodb.net/?retryWrites=true&w=majority&appName=PMT
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
